# proto-cmake-cpp-example

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  install-proto.sh  install-protobuf.sh
proto/: CMakeLists.txt
src/: main.cpp
